--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,5 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "ibm-watsonx-orchestrate>=1.10.2",
+    "requests>=2.32.5",
 ]
